feat: integrate forge and minecraft sync
