# pkg/model/forge.go
@@ -7,9 +7,8 @@ import (
 // Forge within Kleister.
 type Forge struct {
 	ID        string `storm:"id" gorm:"primaryKey;length:36"`
-	Minecraft *Minecraft
-	Slug      string `storm:"unique" gorm:"unique;length:255"`
 	Name      string `storm:"unique" gorm:"unique;length:255"`
+	Minecraft string `storm:"index" gorm:"index;length:64"`
 	CreatedAt time.Time
 	UpdatedAt time.Time
 }
